--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescriptSimple",
+  "name": "typescript-simple",
   "version": "0.0.1",
   "description": "Simple Typescript based React App using parcel.js ",
   "main": "index.html",
@@ -7,13 +7,13 @@
   "license": "MIT",
   "dependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "typescript": "^3.7.5"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "parcel serve ./src/index.html",
